Alterando Fusion e Kalman

--- a/src/1.dataset.ipynb
+++ b/src/1.dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "893c315d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0d5c7004",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "85f2754e",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
     "        busy = np.random.uniform(0.25, 1)     # mais ocupado\n",
     "    \n",
     "    # Adicionar alguma variação para não ficar muito determinístico\n",
-    "    noise_factor = 0.15\n",
+    "    noise_factor = 0.30\n",
     "    if np.random.random() < noise_factor:\n",
     "        # Ocasionalmente criar uma exceção para adicionar realismo\n",
     "        if target_label == 1:\n",
@@ -122,10 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ab18ade9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset salvo em ../datasets/edges_dataset.csv\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.DataFrame(edges, columns=[\"src\", \"dest\", \"rssi\", \"etx\", \"delay\", \"busy_fraction\", \"label\"])\n",
     "os.makedirs(\"../datasets\", exist_ok=True)\n",
