--- a/src/2.inputs.ipynb
+++ b/src/2.inputs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6cad41f7",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fb855109",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "23e0ea91",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b71a351d",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,106 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad163854",
+   "id": "b3ace673",
+   "metadata": {},
+   "source": [
+    "### Inputs Poor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cf6e4fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_inputs = []\n",
+    "\n",
+    "while len(edge_inputs) < num_samples:\n",
+    "    # Gerar sempre métricas ruins para edge inputs\n",
+    "    # Forçar pelo menos 2 métricas ruins por amostra\n",
+    "    \n",
+    "    # RSSI: sempre baixo (sinal fraco)\n",
+    "    rssi = np.random.uniform(-90, -60)  \n",
+    "    \n",
+    "    # ETX: tendência para alto (mais retransmissões)\n",
+    "    etx = np.random.uniform(4, 10)\n",
+    "    \n",
+    "    # Delay: tendência para alto\n",
+    "    delay = np.random.uniform(30, 100)\n",
+    "    \n",
+    "    # Busy fraction: tendência para alto (canal ocupado)\n",
+    "    busy_fraction = np.random.uniform(0.3, 1.0)\n",
+    "    \n",
+    "    # Adicionar algumas variações extremas\n",
+    "    extreme_factor = 0.3\n",
+    "    if np.random.random() < extreme_factor:\n",
+    "        if np.random.random() < 0.5:\n",
+    "            rssi = np.random.uniform(-95, -85)  # RSSI muito baixo\n",
+    "        if np.random.random() < 0.5:\n",
+    "            etx = np.random.uniform(7, 10)      # ETX muito alto\n",
+    "        if np.random.random() < 0.5:\n",
+    "            delay = np.random.uniform(70, 100)  # Delay muito alto\n",
+    "        if np.random.random() < 0.5:\n",
+    "            busy_fraction = np.random.uniform(0.8, 1.0)  # Canal muito ocupado\n",
+    "    \n",
+    "    # Arredondar valores\n",
+    "    rssi = round(rssi, 1)\n",
+    "    etx = round(etx, 1)\n",
+    "    delay = round(delay)\n",
+    "    busy_fraction = round(busy_fraction, 2)\n",
+    "    \n",
+    "    edge_inputs.append([rssi, etx, delay, busy_fraction])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e450f12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radnet_inputs = []\n",
+    "\n",
+    "while len(radnet_inputs) < num_samples:\n",
+    "    # Gerar sempre métricas ruins para radnet\n",
+    "    # Cenários de alta mobilidade, muitos pares, rede congestionada\n",
+    "    \n",
+    "    # APMR: tendência baixa (prefixes ineficientes)\n",
+    "    apmr_edge = np.random.uniform(0.45, 0.65)\n",
+    "    \n",
+    "    # MFSR: tendência baixa (baixa taxa de sucesso)\n",
+    "    mfsr_edge = np.random.uniform(0.50, 0.70)\n",
+    "    \n",
+    "    # IDG: tendência baixa (entrega difícil em grupo)\n",
+    "    idg_global = np.random.uniform(0.45, 0.65)\n",
+    "    \n",
+    "    # Adicionar casos extremamente ruins\n",
+    "    extreme_factor = 0.25\n",
+    "    if np.random.random() < extreme_factor:\n",
+    "        if np.random.random() < 0.5:\n",
+    "            apmr_edge = np.random.uniform(0.45, 0.55)  # APMR muito baixo\n",
+    "        if np.random.random() < 0.5:\n",
+    "            mfsr_edge = np.random.uniform(0.50, 0.60)  # MFSR muito baixo\n",
+    "        if np.random.random() < 0.5:\n",
+    "            idg_global = np.random.uniform(0.45, 0.55)  # IDG muito baixo\n",
+    "    \n",
+    "    # Garantir ranges válidos\n",
+    "    apmr_edge = max(0.45, min(0.70, apmr_edge))\n",
+    "    mfsr_edge = max(0.50, min(0.75, mfsr_edge))\n",
+    "    idg_global = max(0.45, min(0.70, idg_global))\n",
+    "    \n",
+    "    # Arredondar valores\n",
+    "    apmr_edge = round(apmr_edge, 6)\n",
+    "    mfsr_edge = round(mfsr_edge, 6)\n",
+    "    idg_global = round(idg_global, 2)\n",
+    "    \n",
+    "    radnet_inputs.append([apmr_edge, mfsr_edge, idg_global])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "468f2e19",
    "metadata": {},
    "source": [
     "### Save"
@@ -192,10 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e4db4e90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Edges Inputs salvo em ../datasets/edges_input.csv\n"
+     ]
+    }
+   ],
    "source": [
     "edges_input = pd.DataFrame(edge_inputs, columns=[\"rssi\", \"etx\", \"delay\", \"busy_fraction\"])\n",
     "os.makedirs(\"../inputs\", exist_ok=True)\n",
@@ -206,10 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "02880e56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Radnet Input salvo em ../datasets/radnet_input.csv\n"
+     ]
+    }
+   ],
    "source": [
     "radnet_input = pd.DataFrame(radnet_inputs, columns=[\"apmr_edge\", \"mfsr_edge\", \"idg_global\"])\n",
     "os.makedirs(\"../inputs\", exist_ok=True)\n",
