--- a/src/3.train.ipynb
+++ b/src/3.train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c9639f57",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "c176f0ab",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d05ed389",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "bcfcdbf0",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "cf842205",
    "metadata": {},
    "outputs": [],
@@ -131,10 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "46ace084",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    Loss       Train Acc    Test Acc  \n",
+      "------------------------------------------\n",
+      "0        0.7344     0.4031       0.5034    \n",
+      "10       0.4079     0.9563       0.9591    \n",
+      "20       0.1700     0.9684       0.9690    \n",
+      "30       0.0884     0.9718       0.9723    \n",
+      "40       0.0668     0.9753       0.9759    \n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{'Epoch':<8} {'Loss':<10} {'Train Acc':<12} {'Test Acc':<10}\")\n",
     "print(f\"{'-'*42}\")\n",
@@ -182,10 +196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "4e81bb09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo salvo em ../models/gnn_model.pth\n",
+      "Modelo salvo em ../models/scaler_model.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "os.makedirs(\"../models\", exist_ok=True)\n",
     "torch.save(model.state_dict(), \"../models/gnn_model.pth\")\n",
