--- a/src/1.inputs.ipynb
+++ b/src/1.inputs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "6cad41f7",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "fb855109",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "cf6e4fb9",
    "metadata": {},
    "outputs": [],
@@ -283,6 +283,104 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96d963b4",
+   "metadata": {},
+   "source": [
+    "### Inputs Goods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bd9e6b0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_inputs = []\n",
+    "\n",
+    "while len(edge_inputs) < num_samples:\n",
+    "    # Gerar sempre métricas boas para edge inputs\n",
+    "    \n",
+    "    # RSSI: sempre alto (sinal forte)\n",
+    "    rssi = np.random.uniform(-65, -30)  \n",
+    "    \n",
+    "    # ETX: tendência para baixo (poucas retransmissões)\n",
+    "    etx = np.random.uniform(1, 4)\n",
+    "    \n",
+    "    # Delay: tendência para baixo\n",
+    "    delay = np.random.uniform(1, 40)\n",
+    "    \n",
+    "    # Busy fraction: tendência para baixo (canal livre)\n",
+    "    busy_fraction = np.random.uniform(0, 0.4)\n",
+    "    \n",
+    "    # Adicionar algumas variações extremas boas\n",
+    "    extreme_factor = 0.3\n",
+    "    if np.random.random() < extreme_factor:\n",
+    "        if np.random.random() < 0.5:\n",
+    "            rssi = np.random.uniform(-45, -30)  # RSSI muito alto\n",
+    "        if np.random.random() < 0.5:\n",
+    "            etx = np.random.uniform(1, 2)       # ETX muito baixo\n",
+    "        if np.random.random() < 0.5:\n",
+    "            delay = np.random.uniform(1, 20)    # Delay muito baixo\n",
+    "        if np.random.random() < 0.5:\n",
+    "            busy_fraction = np.random.uniform(0, 0.2)  # Canal muito livre\n",
+    "    \n",
+    "    # Arredondar valores\n",
+    "    rssi = round(rssi, 1)\n",
+    "    etx = round(etx, 1)\n",
+    "    delay = round(delay)\n",
+    "    busy_fraction = round(busy_fraction, 2)\n",
+    "    \n",
+    "    edge_inputs.append([rssi, etx, delay, busy_fraction])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0153e6e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radnet_inputs = []\n",
+    "\n",
+    "while len(radnet_inputs) < num_samples:\n",
+    "    # Gerar sempre métricas boas para radnet\n",
+    "    # Cenários de baixa mobilidade, poucos pares, rede estável\n",
+    "    \n",
+    "    # APMR: tendência alta (prefixes eficientes)\n",
+    "    apmr_edge = np.random.uniform(0.75, 0.95)\n",
+    "    \n",
+    "    # MFSR: tendência alta (alta taxa de sucesso)\n",
+    "    mfsr_edge = np.random.uniform(0.80, 0.95)\n",
+    "    \n",
+    "    # IDG: tendência alta (entrega eficiente em grupo)\n",
+    "    idg_global = np.random.uniform(0.70, 0.90)\n",
+    "    \n",
+    "    # Adicionar casos extremamente bons\n",
+    "    extreme_factor = 0.25\n",
+    "    if np.random.random() < extreme_factor:\n",
+    "        if np.random.random() < 0.5:\n",
+    "            apmr_edge = np.random.uniform(0.85, 0.95)  # APMR muito alto\n",
+    "        if np.random.random() < 0.5:\n",
+    "            mfsr_edge = np.random.uniform(0.88, 0.95)  # MFSR muito alto\n",
+    "        if np.random.random() < 0.5:\n",
+    "            idg_global = np.random.uniform(0.80, 0.90)  # IDG muito alto\n",
+    "    \n",
+    "    # Garantir ranges válidos\n",
+    "    apmr_edge = max(0.70, min(0.98, apmr_edge))\n",
+    "    mfsr_edge = max(0.75, min(0.98, mfsr_edge))\n",
+    "    idg_global = max(0.65, min(0.95, idg_global))\n",
+    "    \n",
+    "    # Arredondar valores\n",
+    "    apmr_edge = round(apmr_edge, 6)\n",
+    "    mfsr_edge = round(mfsr_edge, 6)\n",
+    "    idg_global = round(idg_global, 2)\n",
+    "    \n",
+    "    radnet_inputs.append([apmr_edge, mfsr_edge, idg_global])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "468f2e19",
    "metadata": {},
    "source": [
@@ -291,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "e4db4e90",
    "metadata": {},
    "outputs": [
@@ -313,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "02880e56",
    "metadata": {},
    "outputs": [
