--- a/src/6.kalman.ipynb
+++ b/src/6.kalman.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "id": "d8db0a7e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "id": "d7e271a2",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "41a1f475",
    "metadata": {},
    "outputs": [],
@@ -61,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "id": "2e84fe65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def kalman_filter_1d(z, Q=1e-4, R=1e-2):\n",
+    "def kalman_filter(z, Q=1e-4, R=1e-2):\n",
     "    n = len(z)\n",
     "    xhat = np.zeros(n)\n",
     "    P = np.zeros(n)\n",
@@ -84,27 +84,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3af40ad2",
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "310e0518",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Apply"
+    "confidence_fusion = np.where(fusion_output_class == 1,\n",
+    "    fusion_output_confidence,\n",
+    "    1.0 - fusion_output_confidence\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "id": "4ea22f2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf = kalman_filter_1d(fusion_output_confidence)\n",
-    "cls = np.where(conf < 0.5, 1 - fusion_output_class, fusion_output_class)"
+    "kalman = kalman_filter(confidence_fusion)\n",
+    "\n",
+    "# classe final a partir do filtrado\n",
+    "cls = (kalman >= 0.5).astype(int)\n",
+    "\n",
+    "# confiança orientada à classe escolhida\n",
+    "conf = np.where(cls == 1, kalman, 1.0 - kalman)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "id": "448b3ce7",
    "metadata": {},
    "outputs": [
@@ -114,76 +124,76 @@
      "text": [
       "RSSI   ETX   Delay  Busy   Classe   Status   Confiança \n",
       "-------------------------------------------------------\n",
-      "-83    8.3   100    0.72   0        Ruim     0.80      \n",
-      "-89    5.0   58     0.84   0        Ruim     0.80      \n",
-      "-69    5.7   33     0.57   0        Ruim     0.85      \n",
-      "-85    7.5   62     0.81   0        Ruim     0.85      \n",
-      "-88    4.0   36     0.81   0        Ruim     0.86      \n",
-      "-70    4.5   67     0.89   0        Ruim     0.88      \n",
-      "-84    9.3   42     0.73   0        Ruim     0.89      \n",
-      "-70    9.8   98     0.63   0        Ruim     0.87      \n",
-      "-65    9.8   42     0.43   0        Ruim     0.88      \n",
-      "-64    5.4   98     0.90   0        Ruim     0.89      \n",
-      "-74    7.2   40     0.91   0        Ruim     0.89      \n",
-      "-73    7.2   40     0.37   0        Ruim     0.89      \n",
-      "-71    9.0   74     0.58   0        Ruim     0.90      \n",
-      "-82    8.4   90     0.96   0        Ruim     0.89      \n",
-      "-61    6.2   49     0.44   0        Ruim     0.89      \n",
-      "-87    8.3   83     0.70   0        Ruim     0.90      \n",
-      "-89    7.8   53     0.86   0        Ruim     0.89      \n",
-      "-92    4.2   86     0.87   0        Ruim     0.88      \n",
-      "-71    9.5   64     0.32   0        Ruim     0.89      \n",
-      "-86    9.5   69     0.99   0        Ruim     0.88      \n",
-      "-89    4.9   50     0.92   0        Ruim     0.88      \n",
-      "-62    6.3   67     0.64   0        Ruim     0.88      \n",
-      "-89    6.4   78     0.89   0        Ruim     0.89      \n",
-      "-90    4.4   92     0.98   0        Ruim     0.89      \n",
-      "-68    8.4   75     0.94   0        Ruim     0.88      \n",
-      "-78    7.7   52     0.39   0        Ruim     0.88      \n",
-      "-73    9.9   87     0.67   0        Ruim     0.87      \n",
-      "-74    4.8   32     0.77   0        Ruim     0.86      \n",
-      "-87    8.8   40     0.58   0        Ruim     0.87      \n",
-      "-85    8.4   47     0.38   0        Ruim     0.87      \n",
-      "-92    4.8   74     0.38   0        Ruim     0.87      \n",
-      "-67    4.1   50     0.64   0        Ruim     0.87      \n",
-      "-81    7.3   32     0.33   0        Ruim     0.86      \n",
-      "-94    8.2   74     0.98   0        Ruim     0.86      \n",
-      "-75    8.9   74     0.65   0        Ruim     0.85      \n",
-      "-78    9.5   56     0.70   0        Ruim     0.84      \n",
-      "-90    9.1   35     0.92   0        Ruim     0.84      \n",
-      "-89    7.3   72     0.88   0        Ruim     0.85      \n",
-      "-79    9.8   40     0.61   0        Ruim     0.86      \n",
-      "-92    5.7   90     0.96   0        Ruim     0.85      \n",
-      "-89    7.2   80     0.86   0        Ruim     0.86      \n",
-      "-75    9.6   52     0.46   0        Ruim     0.87      \n",
-      "-86    5.0   58     0.41   0        Ruim     0.86      \n",
-      "-66    8.0   71     0.94   0        Ruim     0.85      \n",
-      "-61    9.7   92     0.55   0        Ruim     0.85      \n",
-      "-63    6.7   97     0.47   0        Ruim     0.85      \n",
-      "-79    8.0   53     0.42   0        Ruim     0.85      \n",
-      "-89    5.6   42     0.42   0        Ruim     0.85      \n",
-      "-80    9.5   48     0.99   0        Ruim     0.84      \n",
-      "-63    6.2   71     0.33   0        Ruim     0.84      \n",
-      "-73    7.9   34     0.81   0        Ruim     0.83      \n",
-      "-63    9.6   74     0.78   0        Ruim     0.83      \n",
-      "-84    6.9   54     0.50   0        Ruim     0.83      \n",
-      "-70    9.8   43     0.50   0        Ruim     0.84      \n",
-      "-71    5.0   72     0.68   0        Ruim     0.84      \n",
-      "-63    7.2   77     0.98   0        Ruim     0.84      \n",
-      "-85    9.2   62     0.85   0        Ruim     0.84      \n",
-      "-76    8.4   62     0.74   0        Ruim     0.84      \n",
-      "-77    8.0   65     0.89   0        Ruim     0.84      \n",
-      "-87    7.7   92     0.93   0        Ruim     0.85      \n",
-      "-72    7.0   47     0.92   0        Ruim     0.86      \n",
-      "-61    8.7   64     0.78   0        Ruim     0.85      \n",
-      "-66    7.9   56     0.68   0        Ruim     0.86      \n",
-      "-90    7.7   70     0.94   0        Ruim     0.87      \n",
-      "-61    8.7   33     0.39   0        Ruim     0.87      \n",
-      "-80    8.3   49     0.31   0        Ruim     0.87      \n",
-      "-68    6.2   52     0.43   0        Ruim     0.88      \n",
-      "-84    8.8   69     0.34   0        Ruim     0.88      \n",
-      "-63    4.3   80     0.61   0        Ruim     0.88      \n",
-      "-67    9.3   57     0.42   0        Ruim     0.88      \n"
+      "-89    4.9   47     0.43   0        Ruim     0.52      \n",
+      "-87    8.3   74     0.44   0        Ruim     0.52      \n",
+      "-82    6.9   98     0.34   0        Ruim     0.51      \n",
+      "-70    9.6   76     0.93   1        Bom      0.50      \n",
+      "-62    8.7   61     0.82   1        Bom      0.51      \n",
+      "-73    8.9   36     0.91   1        Bom      0.51      \n",
+      "-80    4.7   62     0.74   1        Bom      0.52      \n",
+      "-60    6.6   100    0.47   1        Bom      0.51      \n",
+      "-77    9.9   78     0.43   1        Bom      0.52      \n",
+      "-89    9.5   78     0.86   1        Bom      0.52      \n",
+      "-95    8.3   98     0.57   1        Bom      0.52      \n",
+      "-72    9.5   68     0.52   1        Bom      0.51      \n",
+      "-90    7.5   48     0.90   1        Bom      0.52      \n",
+      "-88    5.1   76     0.97   1        Bom      0.51      \n",
+      "-85    8.9   79     0.87   1        Bom      0.52      \n",
+      "-78    4.3   81     0.33   1        Bom      0.51      \n",
+      "-78    4.7   37     0.40   1        Bom      0.52      \n",
+      "-88    7.9   82     0.37   1        Bom      0.52      \n",
+      "-88    9.1   47     0.35   1        Bom      0.52      \n",
+      "-85    8.8   99     0.94   1        Bom      0.52      \n",
+      "-69    8.9   71     0.66   1        Bom      0.52      \n",
+      "-68    8.7   71     0.98   1        Bom      0.52      \n",
+      "-79    5.2   78     0.33   1        Bom      0.51      \n",
+      "-90    5.7   62     0.95   1        Bom      0.51      \n",
+      "-90    6.0   75     0.81   1        Bom      0.51      \n",
+      "-66    8.4   45     0.34   1        Bom      0.51      \n",
+      "-63    7.2   65     0.58   1        Bom      0.52      \n",
+      "-72    5.1   87     0.96   1        Bom      0.51      \n",
+      "-73    9.7   33     0.69   1        Bom      0.51      \n",
+      "-81    6.5   56     0.66   1        Bom      0.51      \n",
+      "-75    6.4   67     0.78   1        Bom      0.51      \n",
+      "-81    9.3   53     0.78   1        Bom      0.51      \n",
+      "-60    8.3   85     0.38   1        Bom      0.51      \n",
+      "-86    5.6   97     0.87   1        Bom      0.51      \n",
+      "-73    8.1   76     0.87   1        Bom      0.51      \n",
+      "-62    5.1   89     0.64   1        Bom      0.51      \n",
+      "-62    4.5   41     0.91   1        Bom      0.51      \n",
+      "-73    9.9   95     0.46   1        Bom      0.51      \n",
+      "-69    8.2   39     0.91   1        Bom      0.51      \n",
+      "-74    5.8   56     0.99   1        Bom      0.51      \n",
+      "-82    7.7   85     0.86   1        Bom      0.51      \n",
+      "-78    6.8   91     0.59   1        Bom      0.51      \n",
+      "-80    8.7   47     0.69   1        Bom      0.51      \n",
+      "-85    8.1   68     0.89   1        Bom      0.51      \n",
+      "-76    10.0  96     0.84   1        Bom      0.51      \n",
+      "-62    7.8   76     0.46   1        Bom      0.52      \n",
+      "-74    8.8   91     0.75   1        Bom      0.52      \n",
+      "-74    8.0   48     0.89   1        Bom      0.52      \n",
+      "-64    6.8   99     0.60   1        Bom      0.52      \n",
+      "-67    9.4   35     0.80   1        Bom      0.51      \n",
+      "-67    5.2   81     0.59   1        Bom      0.51      \n",
+      "-61    8.4   73     0.98   1        Bom      0.51      \n",
+      "-87    9.5   46     0.88   1        Bom      0.51      \n",
+      "-65    7.9   98     0.88   1        Bom      0.51      \n",
+      "-81    8.0   71     0.97   1        Bom      0.51      \n",
+      "-86    6.3   77     0.66   1        Bom      0.51      \n",
+      "-70    9.0   35     0.77   1        Bom      0.51      \n",
+      "-93    7.9   85     0.37   1        Bom      0.51      \n",
+      "-83    5.8   32     0.39   1        Bom      0.51      \n",
+      "-76    6.1   58     0.98   1        Bom      0.51      \n",
+      "-74    9.6   72     0.58   1        Bom      0.51      \n",
+      "-91    9.0   78     0.70   1        Bom      0.51      \n",
+      "-60    6.1   80     0.60   1        Bom      0.52      \n",
+      "-67    5.8   30     0.30   1        Bom      0.52      \n",
+      "-71    7.4   72     0.50   1        Bom      0.52      \n",
+      "-94    8.5   51     0.81   1        Bom      0.52      \n",
+      "-65    6.2   60     0.81   1        Bom      0.52      \n",
+      "-94    9.6   90     0.92   1        Bom      0.52      \n",
+      "-88    4.4   41     0.53   1        Bom      0.52      \n",
+      "-88    6.1   78     0.87   1        Bom      0.52      \n"
      ]
     }
    ],
@@ -192,10 +202,9 @@
     "print(f\"{'-'*55}\")\n",
     "\n",
     "CLASS_NAMES = {0: \"Ruim\", 1: \"Bom\"}\n",
-    "\n",
     "for i, row in enumerate(edges_input):\n",
     "    print(f\"{row[0]:<6.0f} {row[1]:<5.1f} {row[2]:<6.0f} {row[3]:<6.2f} \"\n",
-    "          f\"{cls[i]:<8} {CLASS_NAMES[cls[i]]:<8} {conf[i]:<10.2f}\")"
+    "          f\"{cls[i]:<8} {CLASS_NAMES[int(cls[i])]:<8} {conf[i]:<10.2f}\")"
    ]
   },
   {
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "id": "f1ad0de5",
    "metadata": {},
    "outputs": [
